--- a/src/AppBeacon/app/src/main/res/values/strings.xml
+++ b/src/AppBeacon/app/src/main/res/values/strings.xml
@@ -18,5 +18,18 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
+    <!-- Preference Titles -->
+    <string name="messages_header">Mi nodo</string>
+    <string name="sync_header">Servicios</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Modelo:</string>
+    <string name="reply_title">Mac:</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Servicio detección IBeacons</string>
+    <string name="modeloSensorDefault">Promax v9 PRO</string>
+    <string name="macSensorDefault">00:1e:c2:9e:28:6b</string>
 </resources>
