Retoques en algunos diseños de las apps

--- a/src/AppBeacon/app/src/main/res/values/strings.xml
+++ b/src/AppBeacon/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="preferenceMacSensor">idMacSensor</string>
     <string name="preferenceEstadoServicio">idEstadoServicio</string>
     <string name="preferenceIdSensor">idSensor</string>
+    <string name="title_deteccionDeNodo">Detección de Mi Nodo</string>
 </resources>
