--- a/src/AppBeacon/app/src/main/res/values/strings.xml
+++ b/src/AppBeacon/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="preferenceEstadoServicio">idEstadoServicio</string>
     <string name="preferenceIdSensor">idSensor</string>
     <string name="title_deteccionDeNodo">Detección de Mi Nodo</string>
+
+    <string name="preferenceIpServidor"></string>
 </resources>
