--- a/src/AppBeacon/app/src/main/res/values/strings.xml
+++ b/src/AppBeacon/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="usuarioActivoMatricula">usuarioActivoMatricula</string>
     <string name="usuarioActivoTelefono">usuarioActivoTelefono</string>
     <string name="usuarioActivoPassword">usuarioActivoPassword</string>
+    <string name="usuarioActivoIdSensor">usuarioActivoIdSensor</string>
 
 </resources>
