Publicar Datos Privados

--- a/src/AppBeacon/app/src/main/res/values/strings.xml
+++ b/src/AppBeacon/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="usuarioActivoMatricula">usuarioActivoMatricula</string>
     <string name="usuarioActivoTelefono">usuarioActivoTelefono</string>
     <string name="usuarioActivoPassword">usuarioActivoPassword</string>
-    <string name="usuarioActivoIdSensor">usuarioActivoIdSensor</string>
+    <string name="usuarioActivoIdSensor">usuarioActivoIdSensor</string>.
+
+    <string name="horaAlEntrar">horaAlEntrar</string>
 
 </resources>
